@@ -1,6 +1,7 @@
 1.4.8
 - Fix bug related to instrument changes
 - Improve end of file detection
+- Support for editing lyrics
 
 1.4.7
 - Fix for .MID and .MIDI files (upper-case extension)
